fix chevron vertical alignment

--- a/src/components/links/link/link.scss
+++ b/src/components/links/link/link.scss
@@ -14,6 +14,9 @@
   }
 
   &--chevron-right {
+    display: inline-flex;
+    align-items: center;
+    
     @include mixins.icon-left("chevron-right");
   }
 
